# goal-driven-automation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: registry-contract.yml
data/goals/: schema.yaml
data/memory/: cases.json
data/plans/: schema.json
docs/: ARCHITECTURE_V2.md  FSQ20.md  IMPLEMENTATION_PLAN.md  PLAN.md  SCHEMAS.md
docs/Testcase/: Edge_case.md
docs/plans/: 2026-04-09-codebase-remediation-roadmap.md  2026-04-09-context-and-classification-followup-plan.md  2026-04-09-post-remediation-hygiene-plan.md  2026-04-10-agent-first-product-shape-design.md  2026-04-10-agent-first-product-shape-implementation-plan.md  2026-04-10-standalone-ai-product-design.md  2026-04-10-standalone-ai-product-implementation-plan.md  2026-04-14-fsq-mac-v030-compatibility-implementation-plan.md  2026-04-15-fsq-mac-v031-followup-plan.md
docs/product/: agent-first-positioning.md  batch-execution.md  run-result-model.md  test-case-model.md  test-suite-model.md  user-setup-and-distribution.md
e2e_results/: README.md
e2e_results/scenario_4/: log.txt
e2e_results/scenario_5/: log.txt
registry/: actions.yaml  schema.yaml
scenarios/: README.md  poc_goals.json
schemas/: evidence.schema.json  plan-ir.schema.json  test-case.schema.json  test-suite.schema.json
schemas/examples/: edge-new-tab.plan.json  (+4 more)
scripts/: annotate_screenshot.py  generate_html_report.py  generate_report.py  generate_report_v2.py  generate_report_v3.py  run_poc.sh  validate_registry.py
src/: cli.py  demo.py  e2e_test.py  time_utils.py
test-results/: README.md  report.html
(+88 files in other folders)
